# PFDS

./: .gitignore  2023_ProgrammingForDataScience_4_.ipynb  2023_ProgrammingForDataScience_5.ipynb  80305ned_UntypedDataSet_12062023_165519.csv  Huisjes op 13-06-2023.xlsx  My_First_Pythonmaps.ipynb  Tutorial_Selenium.ipynb  Uitgesplitst beoordelingsformulier.xlsx  Uitwerking in Selenium met OO.ipynb  Uitwerking in Selenium.ipynb  Uitwerking.ipynb  Untitled.ipynb  Voorzieningen_en_woonplaatsen 13-06-2023.xlsx  Woonplaatsen voorbeeld.xlsx  categorical.html  logs.txt  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Analysescript-checkpoint.ipynb  Uitwerking in Selenium (gaat vast wel stuk lol)-checkpoint.ipynb  Uitwerking in Selenium (voordat hij stukgaat)-checkpoint.ipynb
huisjes_env/: pyvenv.cfg
huisjes_env/Scripts/: activate  activate.bat
