[tool.poetry]
name = "pfds"
version = "0.1.0"
description = ""
authors = ["CodingJelle <jellevbarneveld@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
bokeh = "^3.3.4"
requests = "^2.31.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
